--- a/main.html
+++ b/main.html
@@ -7,6 +7,33 @@
 </head>
 
 <body>
+	<form method="post">
+		<label for="name">Name*</label>
+		<input type="text" id="name" required><br>
+		<label for="email">Email</label>
+		<input type="email" id="email" required><br>
+		<label>Gender</label>
+		<label>Male</label>
+		<input type="radio"name="gender" required>
+		<label>Female</label>
+		<input type="radio" name="gender" required><br>
+		<label>Laptop Brands</label>
+		<select id="laptop">
+			<option>Apple</option>
+			<option>Asus</option>
+			<option>HP</option>
+		</select><br>
+		<label for="age">Age</label>
+		<input type="number" id="age" required><br>
+		<label for="dob">Date of Birth</label>
+		<input type="date" id="dob" required><br>
+		<label for="password">Password</label>
+		<input type="password" id="password" required><br>
+		<label for="portfolio">Portfolio URL</label>
+		<input type="url" id="portfolio"><br>
+		<button type="submit">Submit</button>
+	</form>
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
