--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 		<input type="radio"name="gender" required>
 		<label>Female</label>
 		<input type="radio" name="gender" required><br>
-		<label>Laptop Brands</label>
+		<label for="laptop">Laptop Brands</label>
 		<select id="laptop">
 			<option>Apple</option>
 			<option>Asus</option>
